force-app/main/default/objects/UserPhotoLoader__PhotoUtilities__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings to be leveraged by the Photo Utilities application</description>
    <fields>
        <fullName>UserPhotoLoader__Allow_Blob_Photo_Loads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the User_Photo_Blob_c field to be set with a Base64 encoded blob string.</description>
        <inlineHelpText>Allow the User_Photo_Blob_c field to be set with a Base64 encoded blob string.</inlineHelpText>
        <label>Allow Blob Photo Loads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__Allow_File_Photo_Loads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the User_Photo_URL_c field to be set with a URL that points to a Salesforce File.</description>
        <inlineHelpText>Allow the User_Photo_URL_c field to be set with a URL that points to a Salesforce File.</inlineHelpText>
        <label>Allow File Photo Loads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__Allow_URL_Photo_Loads__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allow the User_Photo_URL__c field to be set with an external URL.  Reminder, remote site settings must still be activated for the URL.</description>
        <inlineHelpText>Allow the User_Photo_URL__c field to be set with an external URL.  Reminder, remote site settings must still be activated for the URL.</inlineHelpText>
        <label>Allow URL Photo Loads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__Maximum_Records_Per_Transaction__c</fullName>
        <description>Do not exceed 150.  If &apos;Throw Errors&apos; is set to true, a transaction size greater than the maximum will generate an error immediately.  If &apos;Throw Errors&apos; is set to false, a transaction size greater than the maximum will not process any records.  All records will be flagged as &quot;Not Processed&quot;.</description>
        <inlineHelpText>Do not exceed 150.  If &apos;Throw Errors&apos; is set to true, a transaction size greater than the maximum will generate an error immediately.  If &apos;Throw Errors&apos; is set to false, a transaction size greater than the maximum will not process any records.</inlineHelpText>
        <label>Maximum Records Per Transaction</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__Throw_Errors__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When set to true, any failure to process a photo will generate a failure.  When set to false, the transaction will process but not log a failure.</description>
        <inlineHelpText>When set to true, any failure to process a photo will generate a failure.  When set to false, the transaction will process but not log a failure.</inlineHelpText>
        <label>Throw Errors</label>
        <type>Checkbox</type>
    </fields>
    <label>Photo Utilities</label>
</CustomObject>